--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
     </div>
     <div class="chartcontainer">
     <canvas id="chart1"></canvas>
-    <button onClick="downloadImage()">Download</button>
+    <button class="downloadbutton" onClick="downloadImage()">Download</button>
+    <p>Was this website a fun moment in your day?</p>
     <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="frommountains" data-color="#080808" data-emoji=""  data-font="Poppins" data-text="BUY ME A COFFEE" data-outline-color="#ffffff" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>
 
 </div>
