added resizing of graph

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
     </div>
     <div class="chartcontainer">
     <canvas id="chart1"></canvas>
-    <button class="downloadbutton" onClick="downloadImage()">Download</button>
+    <button class="downloadbutton" onClick="downloadImage()">Download Image</button>
     <p>Was this website a fun moment in your day?</p>
+    <p>I am a starving artist</p>
     <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="frommountains" data-color="#080808" data-emoji=""  data-font="Poppins" data-text="BUY ME A COFFEE" data-outline-color="#ffffff" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>
 
 </div>
