--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>Make a cool topographic map of anywhere on earth</p>
     <p>for legal reasons it may or may not look like a certain album cover</p>
     <div class="tab">
-        <button class="tablinks" onclick="openTab(event, 'preset')">Choose from pre-sets</button>
+        <button class="tablinks" id="defaultOpen" onclick="openTab(event, 'preset')">Choose from pre-sets</button>
         <button class="tablinks" onclick="openTab(event, 'placename')">Search a place name</button>
         <button class="tablinks" onclick="openTab(event, 'coords')">Search coordinates</button>
       </div>
@@ -33,7 +33,6 @@
                 <option>Toronto</option>
                 <option>London</option>
             </select>
-            <button class="getElevation" id="button-elevation-preset">Get elevation</button>
         </div>
         <div id="placename" class="tabcontent">
             <h2>Search using a place name</h2>
@@ -43,7 +42,6 @@
             <input name="coords" type="text" class="coords" id="placesearch-coords">
             <label for="placesearchscale">Scale (Kilometers)</label>
             <input type="text" name="scale" class="scale" value="10" id="placesearch-scale">        
-            <button class="getElevation" id="button-elevation-place">Get elevation</button>
 
         </div>
         <div id="coords" class="tabcontent">
@@ -54,13 +52,13 @@
             <input type="text" class="location" name="location" id="coordsearch-location">
             <label for="coordsearchscale">Scale (Kilometers)</label>
             <input type="text" name="coordsearchscale" class="scale" value="10" id="coordsearch-scale">   
-            <button class="getElevation" id="button-elevation-coords">Get elevation</button>     
         </div>
     </div>
     <label for="pointiness">Pointiness (1-10)</label>
     <input type="text" class="pointiness" name="pointiness" value="5">
     <label for="lod">Level of detail (0-100)</label>
     <input type="text" name="lod" class="lod" value="20">
+    <button class="getElevation">Get elevation</button>
     <div class="loading">
         <div class="hypnotic"></div>
         <style>
