--- a/index.html
+++ b/index.html
@@ -26,12 +26,8 @@
     <div class="selectors">
         <div id="preset" class="tabcontent">
             <h2>Choose from pre-set locations</h2>
-            <select>
-                <option>New York City</option>
-                <option>Tokyo</option>
-                <option>San Francisco</option>
-                <option>Toronto</option>
-                <option>London</option>
+            <select id="presets">
+                
             </select>
         </div>
         <div id="placename" class="tabcontent">
