updated to public data

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
     <div class="error-message">
         <p>Something has gone horribly wrong. </p>
-        <p>Try once more for luck, and if it really doesn't work, send me an email at hello@michaelturvey.online</p>
+        <p>Try once more for luck, and if it really doesn't work, send me an email at help@michaelturvey.site</p>
 
     </div>
     <div class="chartcontainer">
@@ -105,7 +105,8 @@
             data-name="bmc-button" data-slug="frommountains" data-color="#080808" data-emoji="" data-font="Poppins"
             data-text="BUY ME A COFFEE" data-outline-color="#ffffff" data-font-color="#ffffff"
             data-coffee-color="#FFDD00"></script>
-
+        <!---<a id="merch">👕 Get this on a t-shirt or tote or something</a> --->
+        <a target="_blank" href="https://www.buymeacoffee.com/frommountains/commissions/5361">💸 Buy the rights to this image.</a>
     </div>
 </body>
 <script src="app.js"></script>
