added social links

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script src="https://kit.fontawesome.com/b15ce4079c.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +19,7 @@
     <h1>Mountain maker</h1>
     <p>Make a cool topographic map of anywhere on earth</p>
     <p>for legal reasons it may or may not look like a certain album cover</p>
+    <p>Right now this is very slow! It is in beta and we are currently building a proper backend.</p>
     <div class="tab">
         <button class="tablinks" id="defaultOpen" onclick="openTab(event, 'preset')">Choose from pre-sets</button>
         <button class="tablinks" onclick="openTab(event, 'placename')">Search a place name</button>
@@ -108,6 +110,23 @@
         <!---<a id="merch">👕 Get this on a t-shirt or tote or something</a> --->
         <a target="_blank" href="https://www.buymeacoffee.com/frommountains/commissions/5361">💸 Buy the rights to this image.</a>
     </div>
+    <footer>
+        <div class = "footer-links">
+            <a aria-label="website" href = "https://michaelturvey.site">
+                <i class = "fas fa-home fa-2xl"></i>
+            <a aria-label="github" href = "https://github.com/tichaelmurvey/" target = "_blank" rel = "noreferrer">
+                <i class = "fab fa-github fa-2xl"></i>
+            </a>
+            <a aria-label="linkedin" href = "https://www.linkedin.com/in/michael-turvey-52393b110/" target = "_blank" rel = "noreferrer">
+                <i class = "fab fa-linkedin fa-2xl"></i>
+            </a>
+            <a aria-label="twitter" href = "https://twitter.com/tichaelmurvey" target = "_blank" rel = "noreferrer">
+                <i class = "fab fa-twitter fa-2xl"></i>
+            </a>
+            <a aria-label="email" href = "mailto:hello@michaelturvey.site">
+                <i class = "fas fa-envelope fa-2xl"></i> 
+            </a>            </div>
+    </footer>
 </body>
 <script src="app.js"></script>
 
