added tshirt API

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     </div>
     <div class="chartcontainer">
         <canvas id="chart1"></canvas>
+        <button onClick = "tshirt()" class="tshirt">👕 Buy this as a T-shirt</button>
         <button class="downloadbutton" onClick="downloadImage()">Download Image</button>
         <p>Was this website a fun moment in your day?</p>
         <p>I am a starving artist</p>
